<?xml version="1.0"?>
<package format="2">
    <name>rviz_vive_plugin</name>
    <version>0.0.0</version>
    <description>The rviz_vive_plugin package</description>
    <maintainer email="denys.kotelovych@gmail.com">Denys Kotelovych</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>libogre-dev</depend>
    <depend>libqt4-dev</depend>
    <depend>libqt4-opengl-dev</depend>
    <depend>boost</depend>
    <depend>rviz</depend>
    <depend>tf</depend>
    <depend>rviz_vive_plugin_msgs</depend>
    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>
